--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
     <meta name="Keywords"
         content="DKISF, Organization, Islamic, Dakshina Kerala, Studets Federation, Federation, Kerala">
     <meta name="Description" content="Dakshina Kerala Islamic Student Federation.">
-    <meta property="og:image" content="https://drive.google.com/uc?id=1RRbmEukB4MIvOGMqOKltxRUQ1af1Qa-F">
+    <meta property="og:image" content="https://dkisf.com/thumb.webp">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="436">
     <meta property="og:image:height" content="228">
-    <meta property="og:title" content="IKISF Official Website">
+    <meta property="og:title" content="DKISF">
     <meta property="og:description" content="Dakshina Kerala Islamic Student Federation.">
     <link rel="icon" href="./icon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
