changed tumb name webp to png

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="Keywords"
         content="DKISF, Organization, Islamic, Dakshina Kerala, Studets Federation, Federation, Kerala">
     <meta name="Description" content="Dakshina Kerala Islamic Student Federation.">
-    <meta property="og:image" content="http://dkisf.com/thumb.wepb">
+    <meta property="og:image" content="http://dkisf.com/thumb.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="436">
     <meta property="og:image:height" content="228">
